--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main class="container">
       <section class="hero">
         <div class="hero-content">
-          <h1>Dress Bold. Live Outlaw.</h1>
+          <h1>Break the rules. Live the legend. Global Outlaw.</h1>
           <p>Modern streetwear and kicks with attitude.</p>
           <button class="primary" data-section="shirts">Shop Shirts</button>
         </div>
